2006-06-06  Laurent GUERBY  <laurent@guerby.net>

        PR ada/27769
        mlib-utl.adb: Use Program_Name.

2006-05-24  Release Manager

	* GCC 4.1.1 released.

2006-03-05  Eric Botcazou  <ebotcazou@adacore.com>

	Backport from mainline:
	2006-02-13  Ed Schonberg  <schonberg@adacore.com>
	PR ada/25885
	* sem_res.adb (Set_Literal_String_Subtype): If the lower bound is not
	static, wrap the literal in an unchecked conversion, because GCC 4.x
	needs a static value for a string bound.

2006-02-28  Release Manager

	* GCC 4.1.0 released.

2006-02-23  Mark Mitchell  <mark@codesourcery.com>

	Backport:
	2005-12-05  Paolo Bonzini  <bonzini@gnu.org>
        * Makefile.in (gnatlib): Fix regex, using \. instead of . when a
	period is meant.
	
2006-02-17  Eric Botcazou  <ebotcazou@adacore.com>

	Backport from mainline:
	2006-02-13  Geert Bosch  <bosch@adacore.com>
	            Gary Dismukes  <dismukes@adacore.com>

	* a-tifiio.adb (Put_Digits): Test Last against To'First - 1 instead of
	0, since the lower bound of the actual string may be greater than one.

	PR ada/20753

	(Put): Fix condition to raise Layout_Error when invalid
	layout is requested.

2006-02-09  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* Make-lang.in (check-gnat): Run run_acats with $(SHELL).

2006-02-03  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/25926
	* initialize.c (__gnat_initialize): Provide HP-UX 10 host and target
	implementation that calls __main.

2006-01-25  Peter O'Gorman  <peter@pogma.com>

	PR bootstrap/25859
	* Makefile.in (GCC_LINK): Remove quotes.
	(tools targets): Link with either $(GNATLINK) --GCC="$(GCC_LINK)"
	or $(GCC_LINK).

	(powerpc-darwin): Pass -shared-libgcc when building shared library.

2006-01-24  Eric Botcazou  <ebotcazou@adacore.com>

	PR ada/18819
	* exp_util.adb (Remove_Side_Effects): Lift enclosing type conversion
	nodes for elementary types in all cases.

2006-01-20  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR ada/24533